2007-06-20  Jeff Hobbs  <jeffh@ActiveState.com>

	* toolbar.tcl (add): update to 1.2
	update option handling with latest snit features.

	* stext.tcl (new): example adaptation of scrolledwindow to create
	a scrolledtext widget.

	* ruler.tcl: update to 1.1
	Correct zoom menu to show proper label.
	update option handling with latest snit features.

	* scrollw.tcl: update to 1.2
	update option handling with latest snit features.
	Use ttk::scrollbar on Windows (just not on Aqua).
	Correctly handle widgets with 1-dim scrolling.
	rework auto-handling of scrollbars.

2007-04-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* scrollw.tcl: cancel pending timer in case we are destroyed

	* mentry.tcl (::widget::createMenuEntryLayout): handle variant
	style cmd usage for 8.4 and 8.5+.

2007-03-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (C-transient, C-parent): ensure we unset parent
	transient and group when not both are set.

2007-01-30  Andreas Kupries  <andreask@activestate.com>

	* toolbar.tcl (itemidentify): New method, converting symbolic
	  button names to their actual widget path.	
	* toolbar.tcl (items): Simplified the code.

2007-01-21  Jeff Hobbs  <jeffh@ActiveState.com>

	* scrollw.tcl (_set_scroll): move loop lock detection to include
	removal of scrollbar

2006-12-05  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (PlaceWindow): handle unmapped anchor

2006-11-27  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (PlaceWindow): always raise after deiconify

2006-11-15  Jeff Hobbs  <jeffh@ActiveState.com>

	* ruler.tcl: add screenruler menu bindings and underlines

2006-11-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl (display): init lastFocusGrab properly
	don't restore focus/grab if we weren't mapped

2006-11-02  Jeff Hobbs  <jeffh@ActiveState.com>

	* dialog.tcl: add -focus option to set desired subwindow focus,
	and make sure we don't restore focus/grab to a subwindow on withdraw

2006-10-27  Jeff Hobbs  <jeffh@ActiveState.com>
